Add missing Swagger annotations for all controllers
